# training-python-packaging

./: Dockerfile  README.md  build.md  container-publish.sh  do.md  publish.sh  pyproject.toml  snapcraft.yaml
ngm_salam/: __main__.py  message.py  sysparams.py
tests/: salam_test.py
