[project]
name = "ngm_salam"
version = "0.0.8"
description = "Just a demo project"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sample", "project"]
dependencies = [
    "requests",
    "psutil"
]

[project.urls]
Homepage = "https://github.com/ngmaibulat/training-python-packaging"
Documentation = "https://github.com/ngmaibulat/training-python-packaging"
Changes = "https://github.com/ngmaibulat/training-python-packaging"

[project.scripts]
salam = "ngm_salam.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
